--- a/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCardList.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 @inherits CardListComponentBase<DiaryModel>
 
-<div class="card-list-wrap">
+<div class="card-list__wrap">
     <div class="@InternalClass">
         <CascadingValue Value="options"
                         IsFixed="true">
@@ -20,7 +20,7 @@
     {
         <MultiDisplay MdAndUp="true">
             <DesktopContent>
-                <div class="card-list-assist-info">
+                <div class="card-list__assist-info">
                     <DiaryStatisticsCard Value="Value"></DiaryStatisticsCard>
                 </div>
             </DesktopContent>
