--- a/src/SwashbucklerDiary.Rcl/Components/EmptyResult/EmptyResult.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/EmptyResult/EmptyResult.razor
@@ -3,8 +3,8 @@
 
 @if (Show)
 {
-    <div class="my-not-have">
-        <div class="text-h6 text--secondary font-weight-bold-desktop">
+    <div class="empty-result">
+        <div class="text-h6 text--secondary font-weight-bold--desktop">
             @(Text ?? I18n.T("Search.Not Found"))
         </div>
     </div>
