--- a/src/SwashbucklerDiary.Rcl/Layout/FirstLaunchDialog/FirstLaunchDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/FirstLaunchDialog/FirstLaunchDialog.razor
@@ -2,7 +2,7 @@
 
 @if (show)
 {
-    <div class="my-first-launch-card" style="background-color:@BackgroundColor;">
+    <div class="first-launch-card" style="background-color:@BackgroundColor;">
         <ScrollContainer Class="d-flex align-center"
                          Style="width:100%;"
                          ContentClass="d-flex justify-center">
