--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
@@ -48,7 +48,7 @@
     @foreach (var list in viewLists)
     {
         <MCard @key="list"
-               Class="list-item-card"
+               Class="my-list-card"
                Elevation="0"
                Rounded="@("lg")">
             <MList Class="dynamic-list-item-collection">
