--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiaryCardSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiaryCardSetting.razor
@@ -7,7 +7,7 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MCard Class="list-item-card"
+    <MCard Class="my-list-card"
            Elevation="0"
            Rounded="@("lg")">
         <MList>
@@ -64,7 +64,7 @@
                 <MListItemContent>
                     @(I18n.T("Setting.Display.DiaryCard.DateFormat.Name"))
                 </MListItemContent>
-                <MListItemContent Class="setting-state">
+                <MListItemContent Class="setting-item-state">
                     <MListItemSubtitle>
                         @(I18n.T(DiaryCardDateFormatKey))
                     </MListItemSubtitle>
