--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting.razor
@@ -7,7 +7,7 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MCard Class="list-item-card"
+    <MCard Class="my-list-card"
            Elevation="0"
            Rounded="@("lg")">
         <MList>
@@ -86,7 +86,7 @@
                 <MListItemContent>
                     @(I18n.T("Setting.Display.Diary.EditAutoSave.Name"))
                 </MListItemContent>
-                <MListItemContent Class="setting-state">
+                <MListItemContent Class="setting-item-state">
                     <MListItemSubtitle>
                         @EditAutoSaveText
                     </MListItemSubtitle>
@@ -98,7 +98,7 @@
         </MList>
     </MCard>
 
-    <MCard Class="list-item-card"
+    <MCard Class="my-list-card"
            Elevation="0"
            Rounded="@("lg")">
         <MList>
