--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/PermissionSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/PermissionSettingPage.razor
@@ -21,7 +21,7 @@
                     @(I18n.T("Permission.Camera"))
                 </MListItemContent>
 
-                <MListItemContent Class="setting-state">
+                <MListItemContent Class="setting-item-state">
                     <MListItemSubtitle>
                         @CameraPermission
                     </MListItemSubtitle>
@@ -45,7 +45,7 @@
                     @(I18n.T("Permission.Storage"))
                 </MListItemContent>
 
-                <MListItemContent Class="setting-state">
+                <MListItemContent Class="setting-item-state">
                     <MListItemSubtitle>
                         @StoragePermission
                     </MListItemSubtitle>
