--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
@@ -11,7 +11,7 @@
         @(I18n.T("Setting.General.Name"))
     </div>
 
-    <MCard Class="list-item-card"
+    <MCard Class="my-list-card"
            Elevation="0"
            Rounded="@("lg")">
         <MList>
@@ -40,7 +40,7 @@
                 <MListItemContent>
                     @(I18n.T("Setting.General.Storage.Name"))
                 </MListItemContent>
-                <MListItemContent Class="setting-state">
+                <MListItemContent Class="setting-item-state">
                     <MListItemSubtitle>
                         @cacheSize
                     </MListItemSubtitle>
@@ -56,7 +56,7 @@
         @(I18n.T("Setting.Display.Name"))
     </div>
 
-    <MCard Class="list-item-card"
+    <MCard Class="my-list-card"
            Elevation="0"
            Rounded="@("lg")">
         <MList>
