--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Backups/LocalBackupsPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Backups/LocalBackupsPage.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Pages
 @inherits ImportantComponentBase
 
-<MCard Class="list-item-card"
+<MCard Class="my-list-card"
        Elevation="0"
        Rounded="@("lg")">
     <MList>
