--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
@@ -113,7 +113,7 @@
                 </div>
 
                 <MCard @key="list"
-                       Class="list-item-card"
+                       Class="my-list-card"
                        Elevation="0"
                        Rounded="@("lg")">
                     <MList Class="dynamic-list-item-collection">
