--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/LocationSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/LocationSettingPage.razor
@@ -7,7 +7,7 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <LocationCardList Value="locations"></LocationCardList>
+    <LocationCardList @bind-Value="locations"></LocationCardList>
 </ScrollContainer>
 
 <div class="right-bottom-float-area">
