--- a/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCardList.razor
@@ -5,7 +5,7 @@
     <div class="@InternalClass">
         <CascadingValue Value="options"
                         IsFixed="true">
-            <Virtualize Items="Value"
+            <Virtualize Items="InternalValue"
                         ItemSize="@ItemHeight"
                         Context="item"
                         OverscanCount="30">
@@ -39,7 +39,7 @@
                   OnSave="SaveSelectTags">
 </SelectTagsDialog>
 
-<DeleteDialog @bind-Visible="showDeleteDiary"
+<DeleteDialog @bind-Visible="showDelete"
               Title="@(I18n.T("Diary.Delete.Title"))"
               Content="@(I18n.T("Diary.Delete.Content"))"
               OnOK="ConfirmDelete">
@@ -49,7 +49,7 @@
               Value="exportDiaries">
 </ExportDialog>
 
-<RadioDialog @bind-Value="sortItem"
+<RadioDialog @bind-Value="SortItem"
              @bind-Visible="showSort"
              OnChange="SortChanged"
              TItem="string"
