--- a/src/SwashbucklerDiary.Rcl/Components/LocationCard/LocationCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/LocationCard/LocationCardList.razor
@@ -3,7 +3,7 @@
 
 <div class="card-list__wrap">
     <div class="card-list__main">
-        <Virtualize Items="Value"
+        <Virtualize Items="InternalValue"
                     ItemSize="60"
                     Context="item">
             <LocationCard @key="item.Id"
@@ -30,21 +30,21 @@
              Text="@(I18n.T("Location.NoLocation"))">
 </EmptyResult>
 
-<InputDialog @bind-Visible="ShowRename"
-             Text="@(SelectedItemValue.Name)"
+<InputDialog @bind-Visible="showRename"
+             Text="@(SelectedItem.Name)"
              Title="@(I18n.T("Location.Rename"))"
              Placeholder="@(I18n.T("Location.Placeholder"))"
              MaxLength="200"
              OnOK="ConfirmRename">
 </InputDialog>
 
-<DeleteDialog @bind-Visible="ShowDelete"
+<DeleteDialog @bind-Visible="showDelete"
               Title="@(I18n.T("Location.Delete.Title"))"
               Content="@(I18n.T("Location.Delete.Content"))"
               OnOK="ConfirmDelete">
 </DeleteDialog>
 
-<RadioDialog @bind-Value="sortItem"
+<RadioDialog @bind-Value="SortItem"
              @bind-Visible="showSort"
              OnChange="SortChanged"
              TItem="string"
