--- a/src/SwashbucklerDiary.Rcl/Pages/TagDetailsPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/TagDetailsPage.razor
@@ -6,8 +6,8 @@
 </MyAppBar>
 
 <ScrollContainer Id="@scrollContainerId">
-    <DiaryCardList @bind-Tags="Tags"
-                   Value="Diaries" />
+    <DiaryCardList @bind-Value="Diaries"
+                   @bind-Tags="Tags" />
 </ScrollContainer>
 
 <div class="right-bottom-float-area">
