💄 style: Restore weather mood style

--- a/src/SwashbucklerDiary.Rcl/Components/ReadWrite/DiaryInfoButton.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/ReadWrite/DiaryInfoButton.razor
@@ -5,10 +5,11 @@
          Rounded
          Plain
          Text
+         Small
          Ripple="false"
          OnClick="@OnClick">
-    <MIcon Class="mr-1" Size="20">
+    <MIcon Class="mr-1" Small>
         @Icon
     </MIcon>
-    <span>@Text</span>
+    <span class="text-caption">@Text</span>
 </MButton>
