--- a/src/SwashbucklerDiary.WebAssembly/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.WebAssembly/Layout/MainLayout.razor
@@ -26,15 +26,15 @@
                 <ErrorContent>
                     <MContainer Class="fill-height justify-center">
                         <div style="white-space: pre-wrap; max-width: 100vw;">
-                            <h1 class="error--text text-center mb-6">Something went wrong</h1>
+                            <h1 class="error--text text-center mb-6">@(I18n.T("Something went wrong"))</h1>
                             <p class="error--text" style="font-size: 1rem;">@context.Message</p>
-                            <p class="info--text">This could be a browser cache issue. Refresh and try again, or manually hard reload (<kbd>Ctrl+F5</kbd> for Windows, <kbd>Command+Shift+R</kbd> for Mac).</p>
+                            <p class="info--text">@((MarkupString)I18n.T("This could be a browser cache issue. Refresh and try again, or manually hard reload (<kbd>Ctrl+F5</kbd> for Windows, <kbd>Command+Shift+R</kbd> for macOS)."))</p>
                             <MButton Block
                                      Class="text-capitalize"
                                      Large
                                      Color="primary"
-                                     OnClick="RefreshPage">
-                                @I18n.T("pwa.refresh")
+                                     OnClick="ForceRefresh">
+                                @I18n.T("Force refresh")
                             </MButton>
                         </div>
                     </MContainer>
